--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +17,11 @@
         android:theme="@style/AppTheme"
         tools:ignore="LookedOrientationActivity"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBQEuiXMJseti4EmnL1LvlizXQfCTrPeF8"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="false"
@@ -23,10 +32,6 @@
         <activity
             android:name=".LogInActivity"
             android:exported="false" />
-        <activity
-            android:name=".AddNoteActivity"
-            android:exported="false"
-            android:screenOrientation="portrait" />
         <activity
             android:name=".SplashActivity"
             android:exported="true"
